version/0.12/_sources/api/solver/_autosummary/settings/xy_plot_child.rst.txt
:orphan:

.. _xy_plot_child:

xy_plot_child
=============

.. currentmodule:: ansys.fluent.core.solver.settings_231.xy_plot_child

.. autoclass:: xy_plot_child
    :show-inheritance:
    :undoc-members:
.. rubric:: Children

========================================   ============================

Child                                                           Summary

========================================   ============================
:ref:`name <name_1>`                                      'name' child.

:ref:`uid <uid>`                                           'uid' child.

:ref:`options <options_10>`                            'options' child.

:ref:`plot_direction <plot_direction>`          'plot_direction' child.

:ref:`x_axis_function <x_axis_function>`       'x_axis_function' child.

:ref:`y_axis_function <y_axis_function>`       'y_axis_function' child.

:ref:`surfaces_list <surfaces_list>`             'surfaces_list' child.

:ref:`physics <physics>`                               'physics' child.

:ref:`geometry <geometry_3>`                          'geometry' child.

:ref:`surfaces <surfaces>`                            'surfaces' child.

:ref:`axes <axes>`                                        'axes' child.

:ref:`curves <curves>`                                  'curves' child.

========================================   ============================

.. rubric:: Commands

==========================   ======================

Command                                     Summary

==========================   ======================
:ref:`display <display_2>`       'display' command.

==========================   ======================

.. rubric:: Included in:

========================   ====================

Parent                                  Summary

========================   ====================
:ref:`xy_plot <xy_plot>`       'xy_plot' child.

========================   ====================

