version/0.19/_sources/api/solver/_autosummary/settings/xy_plot_child.rst.txt
:orphan:

.. _xy_plot_child:

xy_plot_child
=============

.. autoclass:: ansys.fluent.core.solver.settings_241.xy_plot_child.xy_plot_child
    :show-inheritance:

.. rubric:: Attributes

========================================   ============================

Attribute                                                       Summary

========================================   ============================
:ref:`name <name_1>`                                      'name' child.

:ref:`uid <uid>`                                           'uid' child.

:ref:`options <options_15>`                            'options' child.

:ref:`plot_direction <plot_direction>`          'plot_direction' child.

:ref:`x_axis_function <x_axis_function>`       'x_axis_function' child.

:ref:`y_axis_function <y_axis_function>`       'y_axis_function' child.

:ref:`surfaces_list <surfaces_list>`             'surfaces_list' child.

:ref:`physics <physics_1>`                             'physics' child.

:ref:`geometry <geometry_5>`                          'geometry' child.

:ref:`surfaces <surfaces_2>`                          'surfaces' child.

:ref:`axes <axes_1>`                                      'axes' child.

:ref:`curves <curves_1>`                                'curves' child.

========================================   ============================

.. rubric:: Methods

======================================   ========================

Method                                                    Summary

======================================   ========================
:ref:`display <display_3>`                     'display' command.

:ref:`write_to_file <write_to_file>`          Write data to file.

:ref:`read_from_file <read_from_file>`       Read data from file.

:ref:`free_file_data <free_file_data>`            Free file-data.

======================================   ========================

.. rubric:: Included in:

========================   ====================

Parent                                  Summary

========================   ====================
:ref:`xy_plot <xy_plot>`       'xy_plot' child.

========================   ====================

